--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,14 +13,33 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+
+
+       - name: Install dependencies
+         working-directory: ./backend
+         run: npm install
+
+
+       - name: Run test
+         working-directory: ./backend
+         run: npm test
+
+
       - name: Log in to DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        
 
       - name: Build and push image
         uses: docker/build-push-action@v5
